fixed overflow error with side menu

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -19,10 +19,10 @@
 }
 .smallparallax {
   /* The image used */
-  background-image: url("https://cookiesandcups.com/wp-content/uploads/2018/04/eggnoodles-8.jpg");
+  background-image: url("https://static.wixstatic.com/media/15b6e6_52f5013971f845e19d8beb8cb891ba95~mv2_d_4496_3000_s_4_2.jpg/v1/fill/w_1600,h_1067,al_c,q_90/file.jpg");
 
   /* Set a specific height */
-  min-height: 300px;
+  min-height: 500px;
 
   /* opacity: 0.6; */
   /* Create the parallax scrolling effect */
@@ -43,6 +43,7 @@ a:hover {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/9d8ce543190131.57e69a8e9bad2.jpg");
   width: 100%;
+  height: auto;
 }
 
 .menuOptions {
